# RNOT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  config.example.toml  rnot.service  test.sh  verify.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/diff/: mod.rs
src/monitor/: mod.rs
src/service/: mod.rs
src/storage/: mod.rs
src/telegram/: mod.rs
src/tui/: mod.rs
