[package]
name = "rnot"
version = "0.2.0"
edition = "2021"
description = "Website Monitor - Track changes on websites with Telegram notifications"
license = "MIT"
repository = "https://github.com/HautlyS/RNOT"
authors = ["RNOT Team"]

[[bin]]
name = "rnot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.21"
diffy = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
url = "2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
